--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+        <!-- This is an SEO Change -->
+
+    <meta content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+
     <title>Personal Budget</title>
-    <link rel="stylesheet" href="/reset.css">
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="../reset.css">
+    <link rel="stylesheet" href="../main.css">
 </head>
 <body>
 
-    <div class="menu">
+    <div class="menu" >
         <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/login.html">Login</a></li>
-            <li><a href="https://google.com">Google</a></li>
+            <!-- This is an A11y Change -->
+            <li aria-label="Home Button"><a href="/">Home</a></li>
+            <li aria-label="About Button"><a href="/about.html">About</a></li aria-label>
+            <li aria-label="Login Button"><a href="/login.html">Login</a></li aria-label>
+            <li><a href="https://google.com">Google</a></li aria-label>
         </ul>
     </div>
 
@@ -28,12 +33,15 @@
         <div class="page-area">
 
             <div class="text-box">
+                <!-- This is a Semantic HTML Change -->
+                <section>
                 <h1>Stay on track</h1>
                 <p>
                     Do you know where you are spending your money? If you really stop to track it down,
                     you would get surprised! Proper budget management depends on real data... and this
                     app will help you with that!
                 </p>
+            </section>
             </div>
     
             <div class="text-box">
