--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
         <!-- This is an SEO Change -->
 
-    <meta content="text/html; charset=UTF-8" />
+    <meta content="text/html/css; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
 
