--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     
 
     <title>Personal Budget</title>
-    <link rel="stylesheet" href="../../../reset.css">
-    <link rel="stylesheet" href="../../../main.css">
+    <link rel="stylesheet" href="..\..\..\reset.css">
+    <link rel="stylesheet" href="..\..\..\main.css">
 </head>
 <body>
 
