--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
         <!-- This is an SEO Change -->
 
-    <meta content="text/html/css; charset=UTF-8" />
+    <meta charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
 
     <title>Personal Budget</title>
-    <link rel="stylesheet" type="text/css" href="../../reset.css">
-    <link rel="stylesheet" type="text/css" href="../../main.css">
+    <link rel="stylesheet" type="text/css" href="/../pb/../reset.css">
+    <link rel="stylesheet" type="text/css" href="/../pb/../main.css">
 </head>
 <body>
 
