--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
         <!-- This is an SEO Change -->
 
-    <meta charset=UTF-8" />
+    <meta content="text/html/css; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
 
     <title>Personal Budget</title>
-    <link rel="stylesheet" type="text/css" href="/../pb/../reset.css">
-    <link rel="stylesheet" type="text/css" href="/../pb/../main.css">
+    <link rel="stylesheet" type="text/css" href="/../../reset.css">
+    <link rel="stylesheet" type="text/css" href="/../../main.css">
 </head>
 <body>
 
@@ -17,9 +17,9 @@
         <ul>
             <!-- This is an A11y Change -->
             <li aria-label="Home Button"><a href="/">Home</a></li>
-            <li aria-label="About Button"><a href="/about.html">About</a></li aria-label>
-            <li aria-label="Login Button"><a href="/login.html">Login</a></li aria-label>
-            <li><a href="https://google.com">Google</a></li aria-label>
+            <li aria-label="About Button"><a href="../../about.html">About</a></li aria-label>
+            <li aria-label="Login Button"><a href="../..//login.html">Login</a></li aria-label>
+            <li><a href="../../https://google.com">Google</a></li aria-label>
         </ul>
     </div>
 
