--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     
 
     <title>Personal Budget</title>
-    <link rel="stylesheet" type="text/css" href="/reset.css">
-    <link rel="stylesheet" type="text/css" href="/main.css">
+    <link rel="stylesheet" type="text/css" href="/../reset.css">
+    <link rel="stylesheet" type="text/css" href="/../main.css">
 </head>
 <body>
 
